// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`H1: Component should render children when passed in 1`] = `
<h1
  style={
    Object {
      "fontSize": "24px",
    }
  }
>
  Super title
</h1>
`;

exports[`H1: Component should render correctly 1`] = `
<h1
  style={
    Object {
      "fontSize": "24px",
    }
  }
/>
`;

exports[`H1: Component should render with custom styles 1`] = `
<h1
  style={
    Object {
      "color": "blue",
      "fontSize": "24px",
    }
  }
>
  Blue title
</h1>
`;
